# osdev

./: .gitignore  Dockerfile  Makefile  README.md  i686-elf_meson.txt  meson.build  outfile.mem  sdk.sh
denton/: meson.build
denton/arch/: meson.build
denton/arch/aarch64/: boot.S  boot.S~  boot.s~  linker.ld.in  meson.build  meson.build~
denton/arch/aarch64/include/asm/: memlayout.h
denton/arch/i386/: cpuid.c  gdt.c  irq.c  meson.build  task.S  timer.c
denton/arch/i386/boot/: boot_multiboot.S  init.c
denton/arch/i386/drivers/: early_console.c
denton/arch/i386/include/asm/: asm.h  barrier.h  bitops.h  cpuid.h  findbit.h  gdt.h  idt.h  io.h  irq_handler.h  memlayout.h  paging.h  timer.h  types.h
denton/arch/i386/include/asm/drivers/: early_console.h  meson.build
denton/arch/i386/include/asm/sched/: task.h
denton/arch/i386/include/asm/sync/: spinlock.h
denton/arch/i386/mm/: meson.build  paging.c
denton/arch/i386/sync/: spinlock.c  tspinlock.c
denton/include/asm-generic/: cpu.h  errno.h  rwonce.h
denton/include/denton/: atomic.h  bits.h  bma.h  compiler.h  initcall.h  kmain.h  kparam.h  kstring.h  list.h  math.h  multiboot.h  ring.h  stddef.h  tty.h
denton/include/denton/bits/: bits.h
denton/include/denton/math/: minmax.h
denton/include/denton/mm/: bootmem.h
denton/include/denton/sched/: sched_types.h  sleep.h  task.h
denton/include/denton/time/: timer.h
denton/kernel/: meson.build
denton/kernel/core/: heap.c  init.c  klog.c  kmain.c  kparam.c  meson.build  ring.c
denton/kernel/driver/: meson.build  pci.c
denton/kernel/driver/storage/: ata.c
denton/kernel/mm/: allocator.c  bitmap_pga.c  bootmem.c  pga.c
denton/kernel/sched/: core.c  sleep.c  task.c
denton/kernel/sync/: meson.build  sem.c
denton/libc/: meson.build
denton/libc/arch/: meson.build
denton/libc/arch/aarch64/: aarch64~
denton/libc/arch/i386/include/arch/: atomic.h  cmpxchg.h  count_args.h  rwmcc.h
denton/libc/include/: ctype.h  inttypes.h  stddef.h  stdio.h
denton/libc/include/sys/: compiler.h
denton/libc/stdio/: basic_printf.c  meson.build  printf.c
denton/libc/string/: memcmp.c  strlen.c
meson/: i686-elf.cross
meson-cross/: aarch64-elf.cross  i386-elf.cross
scripts/: autogen-notice.sh  gen-gitrev.sh  gen-initcall.sh  gen_initcall.sh  iso.sh  meson.build  qemu.gdb
src/: meson.build
src/iso/: grub.cfg.in  meson.build
src/kernel/: Makefile  boot.s  main.c  meson.build
src/kernel/arch/: meson.build
src/kernel/arch/i386/: cpu.c  cpuid.c  gdt.c  idt.c  irq.c  irq.h  irq_handler.S  linker.ld  meson.build  spinlock.c  task.S  task.c  timer.c  tty.c  vga.h
src/kernel/arch/i386/boot/: init.c  linker.ld.in  meson.build
src/kernel/arch/i386/drivers/: early_console.c  meson.build  pic8259.c
src/kernel/arch/i386/include/asm/: atomic.h  bitops.h  bug.h  cpu.h  cpuid.h  findbit.h  gdt.h  idt.h  instr.h  irq.h  irq_handler.h  memlayout.h  paging.h  rmwcc.h  spinlock.h
src/kernel/arch/i386/include/asm/drivers/: early_console.h  pic8259.h
src/kernel/arch/i386/include/asm/sched/: task.h
src/kernel/arch/i386/include/asm/sync/: spin.h  tspinlock.h
src/kernel/arch/i386/mm/: paging.c
src/kernel/arch/i386/sync/: spinlock.c
src/kernel/denton/: bma.c  heap.c  heap.h  init.c  irq.c  klog.c  kmain.c  kparam.c  meson.build  pci.c  ring.c  sched.c  time.c
src/kernel/denton/disk/: ata.c
src/kernel/denton/lib/: min_heap.c
src/kernel/denton/libd/: meson.build  min_heap.c
src/kernel/denton/mm/: bitmap_pga.c  bitmap_pga.h  bootmem.c  meson.build  pga.c
src/kernel/denton/sched/: core.c  meson.build  rq.c  rr.c  rr.h  task.c  timer.c
src/kernel/denton/sync/: meson.build  sem.c
src/kernel/include/: meson.build
src/kernel/include/denton/: args.h  atomic.h  bits.h  bma.h  bug.h  compiler.h  container_of.h  err.h  errno.h  initcall.h  irq.h  klog.h  kstring.h  list.h  math.h  memsize.h  meson.build  multiboot.h  panic.h  pci.h  ring.h  sched.h  sem.h  spinlock.h  stddef.h  stringify.h  tty.h  types.h  version.h
src/kernel/include/denton/bits/: bitmap.h  bitops.h  bits.h
src/kernel/include/denton/libd/: heap.h  min_heap.h
src/kernel/include/denton/math/: minmax.h  range.h
src/kernel/include/denton/mm/: allocator.h  bootmem.h  mm_types.h  pga.h  pgf.h
src/kernel/include/denton/sched/: rq.h  task.h
src/kernel/include/denton/sync/: sem.h
src/kernel/kernel/: kmain.c  meson.build
src/kernel/libc/include/: meson.build  stdlib.h
src/kernel/libc/include/sys/: cdefs.h
src/kernel/libc/stdlib/: meson.build  strtol.c
src/kernel/libc/string/: memmove.c  memset.c  meson.build
src/libc/: meson.build
src/libc/arch/: meson.build
src/libc/arch/i386/: meson.build
src/libc/arch/i386/include/arch/: rwonce.h
src/libc/include/: meson.build  stddef.h  stdlib.h  string.h
src/libc/include/sys/: cdefs.h  compiler.h
src/libc/stdio/: printf.c  putchar.c
src/libc/stdlib/: rand.c  strtol.c
src/libc/string/: strcpy.c
