kernel_c_sources = []

# foundational parts of the kernel
subdir('core')
kernel_c_sources += kernel_c_core_sources

# memory management
subdir('mm')
kernel_c_sources += kernel_c_mm_sources

# task scheduling
subdir('sched')
kernel_c_sources += kernel_c_sched_sources

# synchronization
subdir('sync')
kernel_c_sources += kernel_c_sync_sources

# device drivers
subdir('driver')
kernel_c_sources += kernel_c_driver_sources
