kernel_inc_dirs = include_directories(
  '.',
)

install_headers(
  'denton/args.h',
  'denton/bits.h',
  'denton/bug.h',
  'denton/compiler.h',
  'denton/container_of.h',
  'denton/klog.h',
  'denton/kmain.h',
  'denton/kparam.h',
  'denton/kstring.h',
  'denton/list.h',
  'denton/math.h',
  'denton/memsize.h',
  'denton/multiboot.h',
  'denton/panic.h',
  'denton/stddef.h',
  'denton/stringify.h',
  'denton/tty.h',
  'denton/types.h',
  preserve_path: true,
)

install_headers(
  'denton/mm/bootmem.h',
  'denton/mm/pga.h',
  preserve_path: true,
)

install_headers(
  'denton/bits/bitops.h',
  'denton/bits/bits.h',
  preserve_path: true,
)


install_headers(
  'denton/math/minmax.h',
  preserve_path: true,
)
