install_headers(
  'tty.h',
  'panic.h',
  'args.h',
  'bits.h',
  'bug.h',
  'compiler.h',
  'klog.h',
  'kmain.h',
  'math.h',
  'memsize.h',
  'multiboot.h',
  'panic.h',
  'stringify.h',
  'tty.h',
  'types.h',
  preserve_path: true,
)

install_headers(
  'mm/bootmem.h',
  preserve_path: true,
)

install_headers(
  'math/minmax.h',
  preserve_path: true,
)
